Feat: New features

--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <header class="main__header">
-    <div class="main__header--">
-<h2>Zonifero products</h2>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+</head>
+<body>
+<div class="root">
+  <img src="https://zonifero.com/static/media/zonifero_logo_black.2be71113.svg" alt="Zonifero logo">
+<div></div><h2>Zonifero products</h2>
     <ul>
      <div><li>Store</li>
       <li> Blog</li>
@@ -32,5 +36,9 @@
 <li>Contact</li>
   </ul>
 </div>
+</div>
 </body>
 </html>
+
+
+
