Feature: Add fonts

--- a/src/index.html
+++ b/src/index.html
@@ -4,37 +4,24 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Zonifero</title>
 </head>
 <body>
 <div class="root">
-  <img src="https://zonifero.com/static/media/zonifero_logo_black.2be71113.svg" alt="Zonifero logo">
-<div></div><h2>Zonifero products</h2>
-    <ul>
-     <div><li>Store</li>
-      <li> Blog</li>
-      <li>Language</li>
-     </ul>
-    </div> 
-    <div>
-      <ul>
-        <li>Sigh in</li>
-        <li>Get the app</li>
-      </ul>
-    </div>
-    </ul>
-  </header>
-</head>
-<body>
-<div>
-  <h4>zonifero WorkPlace</h4>
-  <ul>
-<li>Overviev</li>
-<li>Features</li>
-<li>Specs</li>
-<li>FAQ</li>
-<li>Contact</li>
-  </ul>
+  <div class="header">
+  <div class="header__top--left">
+      <img src="/src/images/logo.png" alt="Zonifero logo">
+  </div>
+<div class="header__top">
+<ul class="header__top--list">
+    <a>Zonifero products: </a>
+    <li><a href="#">Store</a></li>
+    <li><a href="#">Blog</a></li>
+</ul>
+  </div>
+<div class="header__top--language"> </div>
+<div class="header__top--chooseElement"> </div>
+<div class="header__top--right"><a class="header__top--rightText">Get the app</a> </div> 
 </div>
 </div>
 </body>
