Feature: Add new styles

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Zonifero</title>
+  <title>Praktyki zonifero</title>
 </head>
 <body>
 <div class="root">
@@ -12,17 +12,20 @@
   <div class="header__top--left">
       <img src="/src/images/logo.png" alt="Zonifero logo">
   </div>
-<div class="header__top">
-<ul class="header__top--list">
-    <a>Zonifero products: </a>
-    <li><a href="#">Store</a></li>
-    <li><a href="#">Blog</a></li>
-</ul>
-  </div>
-<div class="header__top--language"> </div>
-<div class="header__top--chooseElement"> </div>
-<div class="header__top--right"><a class="header__top--rightText">Get the app</a> </div> 
 </div>
+
+
+<p class="headline__hero">sadsadnsafbewiuwfb</p>
+<div class="card"><h3>Cośtam cośtam</h3><p>
+  Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti commodi necessitatibus culpa voluptatibus molestiae ab odio autem, tempora architecto corrupti nisi velit dicta distinctio ex, voluptatum voluptate molestias officia possimus.
+</p></div>
+</div>
+
+<div class="card">
+  <ul>
+    <a> 1 </a>
+    <a> 2 </a>
+  </ul>
 </div>
 </body>
 </html>
