Feature: Adding some menu

--- a/src/index.html
+++ b/src/index.html
@@ -6,28 +6,30 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Praktyki zonifero</title>
 </head>
+<div class="grid">
 <body>
-<div class="root">
-  <div class="header">
-  <div class="header__top--left">
-      <img src="/src/images/logo.png" alt="Zonifero logo">
-  </div>
-</div>
-
-
-<p class="headline__hero">sadsadnsafbewiuwfb</p>
-<div class="card"><h3>Cośtam cośtam</h3><p>
-  Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti commodi necessitatibus culpa voluptatibus molestiae ab odio autem, tempora architecto corrupti nisi velit dicta distinctio ex, voluptatum voluptate molestias officia possimus.
-</p></div>
-</div>
-
-<div class="card">
+<div class="header__logo" ><img  src="/public/images/logo.png" alt="Zonifero logo"></div>
+<div class="header__list" >
   <ul>
-    <a> 1 </a>
-    <a> 2 </a>
+    <li>Zofinero products</li>
+    <li>Store</li>
+    <li>Blog</li>
   </ul>
 </div>
+<div class="header__globe" ><img src="/public/images/globe.png"  alt="Globe"></div>
+<div class="header__signIn"><p>Sign in</p></div>
+<div class="header__getApp"><p>Get the app </p></div>
+</div>
+<nav class="navigation">
+<h3>zonifero WorkPlace</h3>
+<a>Overview</a>
+<a>Features</a>
+<a>Specs</a>
+<a>FAQ</a>
+<a>Contact</a>
+</nav>
 </body>
+</div>
 </html>
 
 
