Feature: Hero section

--- a/src/index.html
+++ b/src/index.html
@@ -1,36 +1,76 @@
 <!DOCTYPE html>
 <html lang="pl">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Praktyki zonifero</title>
-</head>
-<div class="grid">
-<body>
-<div class="header__logo" ><img  src="/public/images/logo.png" alt="Zonifero logo"></div>
-<div class="header__list" >
-  <ul>
-    <li>Zofinero products</li>
-    <li>Store</li>
-    <li>Blog</li>
-  </ul>
-</div>
-<div class="header__globe" ><img src="/public/images/globe.png"  alt="Globe"></div>
-<div class="header__signIn"><p>Sign in</p></div>
-<div class="header__getApp"><p>Get the app </p></div>
-</div>
-<nav class="navigation">
-<h3>zonifero WorkPlace</h3>
-<a>Overview</a>
-<a>Features</a>
-<a>Specs</a>
-<a>FAQ</a>
-<a>Contact</a>
-</nav>
-</body>
-</div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Praktyki zonifero</title>
+  </head>
+  <body>
+    <header class="header">
+      <div class="logo">
+        <img src="/public/images/logo.png" alt="Zonifero logo" />
+      </div>
+      <div class="header--container">
+        <div class="header__list">
+          <ul class="header__list header__list--ul">
+            <li>Zofinero products</li>
+            <li>Store</li>
+            <li>Blog</li>
+          </ul>
+        </div>
+        <div class="header__globe">
+          <img src="/public/images/globe.png" alt="Globe" />
+        </div>
+        <div class="header__signIn"><p>Sign in</p></div>
+        <div class="header__getApp"><p>Get the app</p></div>
+      </div>
+    </header>
+    <div class="navigation">
+      <ul class="navigation navigation--ul">
+        <p>zonifero WorkPlace:</p>
+        <li><a class="navigation--link" href="#">Overview</a></li>
+        <li><a class="navigation--link" href="#">Features</a></li>
+        <li><a class="navigation--link" href="#">Specs</a></li>
+        <li><a class="navigation--link" href="#">FAQ</a></li>
+        <li><a class="navigation--link" href="#">Contact</a></li>
+      </ul>
+    </div>
+    <div class="hero">
+      <article class="hero--grid">
+        <h1 class="hero__bigText">
+          Streamline <br />
+          your workplace
+        </h1>
+        <p class="hero__description">
+          Effectively and quickly from your mobile device. <br />Staying
+          connected has never been easier with <br />
+          zonifero WorkPlace.
+        </p>
+        <img
+          class="hero__phone"
+          src="/public/images/hand.png"
+          alt="Hand with phone"
+        />
+        <div class="hero__description">
+          <h2 class="hero__header">Management</h2>
+          <p class="hero__paragraph">
+            Tools for real-time management of all your facilities and people
+            across multiple sites. Ease, speed and effectiveness of facilities
+            communications.
+          </p>
+          <h2 class="hero__header">Employees</h2>
+          <p class="hero__paragraph">
+            Improved productivity and satisfaction as your employees stay
+            informed, connected and can feed requests and updates in real time
+          </p>
+          <h2 class="hero__header">Visitors</h2>
+          <p class="hero__paragraph">
+            A smooth and welcoming visitor experience – easy navigation around
+            your facilities.
+          </p>
+        </div>
+      </article>
+    </div>
+  </body>
 </html>
-
-
-
