--- a/src/index.html
+++ b/src/index.html
@@ -8,22 +8,22 @@
   </head>
   <body>
     <header class="header">
-      <div class="logo">
+      <div class="header logo">
         <img src="/public/images/logo.png" alt="Zonifero logo" />
       </div>
-      <div class="header--container">
-        <div class="header__list">
-          <ul class="header__list header__list--ul">
+      <div class="header header--container">
+        <div class="header header__list">
+          <ul class="header header__list header__list--ul">
             <li>Zofinero products</li>
             <li>Store</li>
             <li>Blog</li>
           </ul>
         </div>
-        <div class="header__globe">
+        <div class="header header__globe">
           <img src="/public/images/globe.png" alt="Globe" />
         </div>
-        <div class="header__signIn"><p>Sign in</p></div>
-        <div class="header__getApp"><p>Get the app</p></div>
+        <div class="header header__signIn"><p>Sign in</p></div>
+        <div class="header header__getApp"><p>Get the app</p></div>
       </div>
     </header>
     <div class="navigation">
@@ -37,38 +37,49 @@
       </ul>
     </div>
     <div class="hero">
+      <div class="hero__background"></div>
       <article class="hero--grid">
+       
         <h1 class="hero__bigText">
           Streamline <br />
           your workplace
         </h1>
-        <p class="hero__description">
+        <img
+        class="hero__phone"
+        src="/public/images/hand.png"
+        alt="Hand with phone"
+      />
+       <div class="hero__description">
+        <p>
           Effectively and quickly from your mobile device. <br />Staying
           connected has never been easier with <br />
           zonifero WorkPlace.
+          <div class="hero_application">
+              <img class="hero_application--platform" src="/public/images/android.png" />
+              <img class="hero_application--platform" src="/public/images/apple.png" />
+              </div>
         </p>
-        <img
-          class="hero__phone"
-          src="/public/images/hand.png"
-          alt="Hand with phone"
-        />
-        <div class="hero__description">
-          <h2 class="hero__header">Management</h2>
-          <p class="hero__paragraph">
+      </div>
+        <div class="hero__adventages adventages">
+         <div class="adventages__card"><h2 class="adventages__card adventages__card--header">Management</h2>
+          <p class="adventages__card adventages__card--paragraph">
             Tools for real-time management of all your facilities and people
             across multiple sites. Ease, speed and effectiveness of facilities
             communications.
           </p>
-          <h2 class="hero__header">Employees</h2>
-          <p class="hero__paragraph">
+        </div>
+          <div class="adventages__card"><h2 class="adventages__card adventages__card--header">Employees</h2>
+          <p class="adventages__card adventages__card--paragraph">
             Improved productivity and satisfaction as your employees stay
             informed, connected and can feed requests and updates in real time
           </p>
-          <h2 class="hero__header">Visitors</h2>
-          <p class="hero__paragraph">
+        </div>
+          <div class="adventages__card"><h2 class="adventages__card adventages__card--header">Visitors</h2>
+          <p class="adventages__card adventages__card--paragraph">
             A smooth and welcoming visitor experience – easy navigation around
             your facilities.
           </p>
+        </div>
         </div>
       </article>
     </div>
