Feature: Header fixed - sticky

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,9 @@
     <title>Praktyki zonifero</title>
   </head>
   <body>
+    <div class="parentheader">
+        <div class="parentheader__fixed"> 
+    
     <header class="header">
       <div class="header logo">
         <img src="/public/images/logo.png" alt="Zonifero logo" />
@@ -36,6 +39,8 @@
         <li><a class="navigation--link" href="#">Contact</a></li>
       </ul>
     </div>
+  </div>
+</div>
     <div class="hero">
       <div class="hero__background"></div>
       <article class="hero--grid">
