Feature: [Wip} Media

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
     <header class="header">
       <div class="header logo">
         <img src="/public/images/logo.png" alt="Zonifero logo" />
+
       </div>
       <div class="header header--container">
         <div class="header header__list">
@@ -43,7 +44,7 @@
 </div>
     <div class="hero">
       <div class="hero__background"></div>
-      <article class="hero--grid">
+      <article class="hero--style">
        
         <h1 class="hero__bigText">
           Streamline <br />
@@ -88,5 +89,6 @@
         </div>
       </article>
     </div>
+    
   </body>
 </html>
