Feature: Grid hero mobile and desktop

--- a/src/index.html
+++ b/src/index.html
@@ -14,15 +14,15 @@
       <div class="header logo">
         <img src="/public/images/logo.png" alt="Zonifero logo" />
       </div>
-      <div class="header header--container">
+      <div class="header header__container">
         <div class="header header__list">
-          <ul class="header header__list header__list--ul">
+          <ul class="header header__list header__pointing">
             <li>Zofinero products</li>
             <li>Store</li>
             <li>Blog</li>
           </ul>
         </div>
-        <div style='display: flex; flex-direction: row'>
+        <div class="header__globe-arrow-container">
           <img src="/public/images/globe.png" alt="Globe" class="header header__globe"/>
           <img src="../public/images/chevron-down-solid.svg" class="header header__arrow">
         </div>
@@ -44,7 +44,7 @@
   </div>
   <div class="parentheader__fixed--mobile">
       <img src="/public/images/mobile_logo.png" alt="Zonifero logo" />
-      <div style="display: flex; flex-direction: row; align-items: center;"><p class="navigation__paragraph">zonifero WorkPlace:</p>
+      <div class='header__mobile-container'><p class="navigation__paragraph">zonifero WorkPlace:</p>
       <img src="../public/images/chevron-down-solid.svg" class="header header__arrow">
     </div>
       <div class="header__hamburger" >☰</div>
@@ -53,11 +53,7 @@
     <div class="hero">
       <div class="hero__background"></div>
       <article class="hero__style">
-       
-        <h1 class="hero__bigText">
-          Streamline <br />
-          your workplace
-        </h1>
+      
         <img
         class="hero__phone"
         src="/public/images/hand.png"
