--- a/src/index.html
+++ b/src/index.html
@@ -7,50 +7,51 @@
     <title>Praktyki zonifero</title>
   </head>
   <body>
-    <div class="parentheader">
-        <div class="parentheader__fixed--mobile">
+    <header class="parent-header">
+        <div class="parent-header__navigation-mobile">
             <img src="/public/images/mobile_logo.png" alt="Zonifero logo" />
-            <div class="header__mobile-container">
-              <p class="navigation__paragraph">zonifero WorkPlace:</p>
+            <div class="main-header__mobile-container">
+              <p class="navigation_-text
+              ">zonifero WorkPlace:</p>
               <img
                 src="../public/images/chevron-down-solid.svg"
-                class="header header__arrow"
+                class="main-header main-header__arrow"
               />
             </div>
-            <div class="header__hamburger">☰</div>
+            <div class="main-header__hamburger">☰</div>
           </div>
-      <div class="parentheader__fixed--desktop">
-        <header class="header">
-          <div class="header logo">
+      <div class="parent-header__navigation-desktop">
+        <div class="main-header">
+          <div class="main-header main-header__logo">
             <img src="/public/images/logo.png" alt="Zonifero logo" />
           </div>
-          <div class="header header__container">
-            <div class="header header__list">
-              <ul class="header header__list header__pointing">
+          <div class="main-header main-header__container">
+            <div class="main-header main-header__list">
+              <ul class="main-header main-header__list main-header__pointing">
                 <li>Zofinero products</li>
                 <li>Store</li>
                 <li>Blog</li>
               </ul>
             </div>
-            <div class="header__globe-arrow-container">
+            <div class="main-header__globe-arrow-container">
               <img
                 src="/public/images/globe.png"
                 alt="Globe"
-                class="header header__globe"
+                class="main-header main-header__globe"
               />
               <img
                 src="../public/images/chevron-down-solid.svg"
-                class="header header__arrow"
+                class="main-header main-header__arrow"
               />
             </div>
 
-            <div class="header header__signIn"><p>Sign in</p></div>
-            <div class="header header__getApp"><p>Get the app</p></div>
+            <div class="main-header__sign-in"><p>Sign in</p></div>
+            <div class="main-header__get-app"><p>Get the app</p></div>
           </div>
-        </header>
+        </div>
         <div class="navigation">
-          <ul class="navigation navigation__ul">
-            <p class="navigation__paragraph">zonifero WorkPlace:</p>
+          <ul class="navigation navigation__listing">
+            <p class="navigation__text">zonifero WorkPlace:</p>
             <li><a class="navigation__link" href="#">Overview</a></li>
             <li><a class="navigation__link" href="#">Features</a></li>
             <li><a class="navigation__link" href="#">Specs</a></li>
@@ -59,8 +60,8 @@
           </ul>
         </div>
       </div>
-    </div>
-    <div class="hero">
+    </header>
+    <section class="hero">
         <h1 class="hero__bigText">
           Streamline <br />
           your workplace
@@ -76,42 +77,44 @@
           </p>
           <div class="hero__application">
             <img
-              class="hero_application--platform"
+              class="hero__application-platform"
               src="/public/images/android.png"
             />
             <img
-              class="hero_application--platform"
+              class="hero__application-platform"
               src="/public/images/apple.png"
             />
           </div>
         </div>
 
-        <div class="hero__adventages adventages">
-            <div class="adventages__card">
-              <h2 class="adventages__card adventages__card--header">Management</h2>
-              <p class="adventages__card adventages__card--paragraph">
+        <article class="hero__hero-adventage hero-adventage">
+            <div class="hero-adventage__card">
+              <h2 class="hero-adventage__card hero-adventage__card-main-header">Management</h2>
+              <p class="hero-adventage__card hero-adventage__card-text
+              ">
                 Tools for real-time management of all your facilities and people
                 across multiple sites. Ease, speed and effectiveness of facilities
                 communications.
               </p>
             </div>
-            <div class="adventages__card">
-              <h2 class="adventages__card adventages__card--header">Employees</h2>
-              <p class="adventages__card adventages__card--paragraph">
+            <div class="hero-adventage__card">
+              <h2 class="hero-adventage__card hero-adventage__card-main-header">Employees</h2>
+              <p class="hero-adventage__card hero-adventage__card-text
+              ">
                 Improved productivity and satisfaction as your employees stay
                 informed, connected and can feed requests and updates in real time
               </p>
             </div>
-            <div class="adventages__card">
-              <h2 class="adventages__card adventages__card--header">Visitors</h2>
-              <p class="adventages__card adventages__card--paragraph">
+            <div class="hero-adventage__card">
+              <h2 class="hero-adventage__card hero-adventage__card-main-header">Visitors</h2>
+              <p class="hero-adventage__card hero-adventage__card-text
+              ">
                 A smooth and welcoming visitor experience – easy navigation around
                 your facilities.
               </p>
             </div>
-      </div>
-      
-      </div>
+      </article>  
+      </section>
     </div>
   </body>
 </html>
