Feature: Refactor Formatted

--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
         <div class="navigation">
           <ul class="navigation navigation__listing">
             <p class="navigation__text">zonifero WorkPlace:</p>
-            <li><a class="navigation__link" href="#">Overview</a></li>
+            <li><a class="navigation__link" href="#hero">Overview</a></li>
             <li><a class="navigation__link" href="#">Features</a></li>
             <li><a class="navigation__link" href="#">Specs</a></li>
             <li><a class="navigation__link" href="#">FAQ</a></li>
@@ -61,7 +61,7 @@
         </div>
       </div>
     </header>
-    <section class="hero">
+    <section class="hero" id="hero">
         <h1 class="hero__bigText">
           Streamline <br />
           your workplace
@@ -89,7 +89,7 @@
 
         <article class="hero__hero-adventage hero-adventage">
             <div class="hero-adventage__card">
-              <h2 class="hero-adventage__card hero-adventage__card-main-header">Management</h2>
+              <h2 class="hero-adventage__card hero-adventage__card-header">Management</h2>
               <p class="hero-adventage__card hero-adventage__card-text
               ">
                 Tools for real-time management of all your facilities and people
@@ -98,7 +98,7 @@
               </p>
             </div>
             <div class="hero-adventage__card">
-              <h2 class="hero-adventage__card hero-adventage__card-main-header">Employees</h2>
+              <h2 class="hero-adventage__card hero-adventage__card-header">Employees</h2>
               <p class="hero-adventage__card hero-adventage__card-text
               ">
                 Improved productivity and satisfaction as your employees stay
@@ -106,7 +106,7 @@
               </p>
             </div>
             <div class="hero-adventage__card">
-              <h2 class="hero-adventage__card hero-adventage__card-main-header">Visitors</h2>
+              <h2 class="hero-adventage__card hero-adventage__card-header">Visitors</h2>
               <p class="hero-adventage__card hero-adventage__card-text
               ">
                 A smooth and welcoming visitor experience – easy navigation around
