--- a/src/index.html
+++ b/src/index.html
@@ -60,6 +60,7 @@
           </ul>
         </div>
       </div>
+    </div>
     </header>
     <section class="hero" id="hero">
         <h1 class="hero__bigText">
@@ -114,7 +115,28 @@
               </p>
             </div>
       </article>  
-      </section>
-    </div>
+    </section>
+    <form>
+      <div>
+        <label>First Name</label>
+        <input>
+      </div>
+      <div>
+          <label>Family name</label>
+          <input>      
+        </div>
+        <div>
+            <label>Your email</label>
+            <input>      
+          </div>
+          <div>
+              <label>Your phone</label>
+              <input>      
+            </div>
+            <div>
+                <label>Message</label>
+                <input>      
+              </div>
+    </form>
   </body>
 </html>
