Feature: Responsivness fixing

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
               />
             </div>
             <div class="main-header__hamburger">☰</div>
+
           </div>
       <div class="parent-header__navigation-desktop">
         <div class="main-header">
@@ -63,7 +64,7 @@
     </div>
     </header>
     <section class="hero" id="hero">
-        <h1 class="hero__bigText">
+        <h1 class="hero__big-text">
           Streamline <br />
           your workplace
         </h1>
@@ -116,8 +117,8 @@
             </div>
       </article>  
     </section>
-    <form>
-      <div>
+    <form class="form-section">
+      <div class="form-section__input-style">
         <label>First Name</label>
         <input>
       </div>
@@ -137,6 +138,7 @@
                 <label>Message</label>
                 <input>      
               </div>
+    <button>Send Message</button>
     </form>
   </body>
 </html>
