Feature: [wip] form

--- a/src/index.html
+++ b/src/index.html
@@ -117,28 +117,19 @@
             </div>
       </article>  
     </section>
-    <form class="form-section">
-      <div class="form-section__input-style">
-        <label>First Name</label>
-        <input>
+    <form class="form-section"> 
+      <div class="form-section__options-container">
+          <a class="form-section__option">Contact form</a>
+          <a class="form-section__option">Call us</a>
       </div>
-      <div>
-          <label>Family name</label>
-          <input>      
-        </div>
-        <div>
-            <label>Your email</label>
-            <input>      
-          </div>
-          <div>
-              <label>Your phone</label>
-              <input>      
-            </div>
-            <div>
-                <label>Message</label>
-                <input>      
-              </div>
-    <button>Send Message</button>
+      <div class="form-section__input-container">
+      <div><label>First Name</label><input></div>
+      <div><label>Family name</label><input></div>
+      <div><label>Your email</label><input></div>
+      <div><label>Your phone</label><input></div>
+      <div><label>Message</label><input></div>
+      </div>
+      <button>Send Message</button>
     </form>
   </body>
 </html>
