Feature: [wip] form correct forms

--- a/src/index.html
+++ b/src/index.html
@@ -123,13 +123,12 @@
           <a class="form-section__option">Call us</a>
       </div>
       <div class="form-section__input-container">
-      <div><label>First Name</label><input></div>
-      <div><label>Family name</label><input></div>
-      <div><label>Your email</label><input></div>
-      <div><label>Your phone</label><input></div>
-      <div><label>Message</label><input></div>
-      </div>
-      <button>Send Message</button>
+      <p><label for="firstname" >First Name</label><input placeholder="Enter your name" id='firstname' name="name"></p>
+      <p><label for="familyname" >Family name</label><input></p>
+      <p><label for="email" >Your email</labelfor="Firstname"><input></p>
+      <p><label for="phone">Your phone</label><input></p>
+      <p><label for="textarea">Message</label><input></p></div>
+      <input type="submit" value="Send Message"></input>
     </form>
   </body>
 </html>
